add suggestion page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default, dark --prefersdark, forest, abyss;
+  themes: light --default, dark, forest, abyss;
 }
